# golaborate-clients

./: README.md  gitignore  setup.cfg  setup.py
admin/: __init__.py
aerotech/: __init__.py
andor/: __init__.py
cryocon/: __init__.py
daq/: __init__.py  dac.py
fluke/: __init__.py
golab_common/: __init__.py  retry.py
matlab/: nktEmissionOn.m  nktNDSet.m  nktPowerGet.m  nktPowerSet.m
matlab/aerotech/: aerotechGetEnabled.m  aerotechGetLimits.m  aerotechGetPos.m  aerotechGetVelocity.m  aerotechHome.m  aerotechMoveAbs.m  aerotechMoveRel.m  aerotechSetEnabled.m  aerotechSetVelocity.m
matlab/andor/: andorGetAOI.m  andorGetBinning.m  andorGetBurst.m  andorGetEMGain.m  andorGetEMGainMode.m  andorGetEMGainRange.m  andorGetExposureTime.m  andorGetFeature.m  andorGetFrame.m  andorGetFrame2.m  andorGetRecorderEnabled.m  andorGetRecorderPrefix.m  andorGetRecorderRoot.m  andorGetShutterOpen.m  andorSetAOI.m  andorSetBinning.m  andorSetEMGain.m  andorSetEMGainMode.m  andorSetExposureTime.m  andorSetFeature.m  andorSetRecorderEnabled.m  andorSetShutter.m  get_single_andor_image.m
matlab/daq/: dacOutput.m  dacOutputDN.m
matlab/fluke/: dewkGetTH.m
matlab/itc4000/: itcGetCurrent.m  itcGetEmission.m  itcOff.m  itcOn.m  itcSetCurrent.m
matlab/motion/: motionGetEnabled.m  motionGetLimits.m  motionGetPos.m  motionGetVelocity.m  motionHome.m  motionHomed.m  motionMoveAbs.m  motionMoveRel.m  motionSetEnabled.m  motionSetVelocity.m  motionStop.m
matlab/nkt/: doc.m  nktCenterBandwidthGet.m  nktCenterBandwidthSet.m  nktEmissionGet.m  nktEmissionOff.m  nktEmissionRuntimeGet.m  nktMainModuleStatus.m  nktNDGet.m  nktVariaStatus.m
motion/: __init__.py
nkt/: __init__.py
tests/: test_retry.py
thermocube/: __init__.py
thorlabs/: __init__.py
tmc/: __init__.py
