[metadata]
name = libhcit
author = Brandon Dube
author-email = brandon.dube@jpl.nasa.gov
home-page = https://github.jpl.nasa.gov/hcit/libhcit
description = tools for working with High Contrast Imaging Testbed data
packages = libhcit
long-description = file: README.md
license = unlicensed
platform = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.6
tests_require = pytest
test_suite = tests
setup_requires =
    setuptools >= 38.3.0
    setuptools_scm
install_requires =
    numpy
    scipy
    astropy
    retry

[options.packages.find]
exclude = tests/, docs

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[flake8]
max-line-length = 120
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/
